--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,8 +1,3 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
   adapter: mysql2
   encoding: utf8
@@ -10,11 +5,7 @@ development:
   pool: 5
   username: root
   password:
-  socket: /tmp/mysql.sock
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   adapter: mysql2
   encoding: utf8
@@ -22,7 +13,6 @@ test:
   pool: 5
   username: root
   password:
-  socket: /tmp/mysql.sock
 
 production:
   adapter: mysql2
@@ -31,4 +21,6 @@ production:
   pool: 5
   username: root
   password:
-  socket: /tmp/mysql.sock
+
+cucumber:
+  <<: *test
